# terraform-module-data

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  book.toml  collect.sh  scratch.md
.github/workflows/: ci.yaml  docs.yaml  update.yaml
data/github/: ecs.json  eks-pod-identity.json  eks.json  lambda.json  rds-aurora.json  rds.json
data/github/acm/: clones.json  views.json
data/github/alb/: clones.json  views.json
data/github/apigateway-v2/: clones.json  views.json
data/github/app-runner/: clones.json  views.json
data/github/appconfig/: clones.json  views.json
data/github/appsync/: clones.json  views.json
data/github/atlantis/: clones.json  views.json
data/github/autoscaling/: clones.json  views.json
data/github/batch/: clones.json  views.json
data/github/cloudfront/: clones.json  views.json
data/github/cloudwatch/: clones.json  views.json
data/github/customer-gateway/: clones.json  views.json
data/github/datadog-forwarders/: clones.json  views.json
data/github/dms/: clones.json  views.json
data/github/dynamodb-table/: clones.json  views.json
data/github/ebs-optimized/: clones.json  views.json
data/github/ec2-instance/: clones.json  views.json
data/github/ecr/: clones.json  views.json
data/github/ecs/: clones.json  views.json
data/github/efs/: clones.json  views.json
data/github/eks/: clones.json  views.json
data/github/eks-pod-identity/: clones.json  views.json
data/github/elasticache/: clones.json  views.json
data/github/elb/: clones.json  views.json
data/github/emr/: clones.json  views.json
data/github/eventbridge/: clones.json  views.json
data/github/fsx/: clones.json  views.json
data/github/global-accelerator/: clones.json  views.json
data/github/iam/: clones.json  views.json
data/github/key-pair/: clones.json  views.json
data/github/kms/: clones.json  views.json
data/github/lambda/: clones.json  views.json
data/github/managed-service-grafana/: clones.json  (+1 more)
docs/: SUMMARY.md  chapter_1.md  github-clones.md  github-page-views.md  github.md  registry-downloads.md
docs/plans/: 2026-03-06-astro-chartjs-migration.md
site/: astro.config.mjs  package-lock.json  package.json
src/: cli.rs  data.rs  github.rs  graph.rs  lib.rs  main.rs  registry.rs
src/templates/: github-clones.tpl  github-page-views.tpl  github.tpl  registry-downloads.tpl
theme/: index.hbs  overrides.css
(+46962 files in other folders)
